--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,122 @@
+kamon.prometheus {
+
+  labels {
+    application_name = "my cool app"
+    application_version = "42"
+  }
+
+  subscriptions {
+    histogram        = [ "**" ]
+    min-max-counter  = [ "**" ]
+    gauge            = [ "**" ]
+    counter          = [ "**" ]
+    trace            = [ "**" ]
+    trace-segment    = [ "**" ]
+    akka-actor       = [ "**" ]
+    akka-dispatcher  = [ "**" ]
+    akka-router      = [ "**" ]
+    system-metric    = [ "**" ]
+    http-server      = [ "**" ]
+    spray-can-server = [ "**" ]
+  }
+
+  # Enable or disable publishing the Prometheus scraping enpoint using a embedded server.
+  start-embedded-http-server = yes
+
+  # Enable of disable including tags from kamon.prometheus.environment as labels
+  include-environment-tags = no
+
+  buckets {
+    default-buckets = [
+      10,
+      30,
+      100,
+      300,
+      1000,
+      3000,
+      10000,
+      30000,
+      100000
+    ]
+
+    time-buckets = [
+      0.005,
+      0.01,
+      0.025,
+      0.05,
+      0.075,
+      0.1,
+      0.25,
+      0.5,
+      0.75,
+      1,
+      2.5,
+      5,
+      7.5,
+      10
+    ]
+
+    information-buckets = [
+      512,
+      1024,
+      2048,
+      4096,
+      16384,
+      65536,
+      524288,
+      1048576
+    ]
+
+    # Per metric overrides are possible by specifying the metric name and the histogram buckets here
+    custom {
+      // example:
+      // "akka.actor.processing-time" = [0.1, 1.0, 10.0]
+    }
+  }
+
+
+  embedded-server {
+
+    # Hostname and port used by the embedded web server to publish the scraping enpoint.
+    hostname = "0.0.0.0"
+    port = 9095
+  }
+
+  # Specify metric name overrides here
+  metric-overrides {
+    // example:
+    //  "span.processing-time" {
+    //    name = new-name
+    //
+    //    delete-tags = [
+    //      tag-name
+    //    ]
+    //
+    //    rename-tags {
+    //      "tag-name" = new-tag-name
+    //    }
+    //  }
+  }
+
+}
+
+
+kamon.modules {
+  prometheus-reporter {
+    enabled = true
+    name = "Prometheus Reporter"
+    description = "Exposes a scrape endpoint for Prometheus"
+    factory = "kamon.prometheus.PrometheusReporter$Factory"
+  }
+
+  pushgateway-reporter {
+    enabled = false
+    name = "Prometheus Pushgateway Reporter"
+    description = "Pushes metrics to Prometheus Pushgateway"
+    factory = "kamon.prometheus.PrometheusPushgatewayReporter$Factory"
+  }
+}
+
 datastax-java-driver {
   basic.contact-points = [ "cassandra.us-east-1.amazonaws.com:9142"]
   basic.request.consistency = LOCAL_QUORUM
